# Hub-Assist

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/attendance/: attendance.controller.ts  attendance.dto.ts  attendance.entity.ts  attendance.service.ts
backend/src/auth/: auth.controller.ts  (+11 more)
contracts/: Cargo.toml  README.md
contracts/access_control/: Cargo.toml
contracts/access_control/src/: access_control.rs  access_control_tests.rs  errors.rs  lib.rs  types.rs
contracts/bluecollar_hub/: Cargo.toml
contracts/bluecollar_hub/src/: lib.rs
contracts/common_types/src/: lib.rs  types.rs
contracts/hubassist_hub/: Cargo.toml
contracts/hubassist_hub/src/: lib.rs
contracts/manage_hub/src/: attendance_log.rs  batch.rs  fractionalization.rs  guards.rs  lib.rs  membership_token.rs  migration.rs  pause_errors.rs  rewards.rs  royalty.rs  staking.rs  subscription.rs  test.rs  tier_management.rs  upgrade.rs  upgrade_errors.rs  validation.rs
contracts/membership_token/: Cargo.toml
contracts/membership_token/src/: lib.rs  test.rs
contracts/payment_escrow/: Cargo.toml
contracts/payment_escrow/src/: errors.rs  lib.rs  types.rs
contracts/workspace_booking/: Cargo.toml
contracts/workspace_booking/src/: errors.rs  lib.rs  test.rs  types.rs
frontend/: jest.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
(+187 files in other folders)
