[workspace]
members = [
    "hubassist_hub",
    "workspace_booking",
    "membership_token",
    "access_control",
    "payment_escrow",
    "common_types",
    "manage_hub",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
common_types = { path = "common_types" }
