[workspace]
members = [
    "hubassist_hub",
    "workspace_booking",
    "membership_token",
    "access_control",
    "payment_escrow",
    "common_types",
    "manage_hub",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }
soroban-sdk-testutils = { version = "21.0.0", package = "soroban-sdk", features = ["testutils"] }
common_types = { path = "common_types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1

[profile.test-coverage]
inherits = "test"

